updateScore method updated and functional